// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circle > should render 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-10 w-10 px-4 py-2 ring-6 ring-theme-background duration-100"
  />
</div>
`;

exports[`Circle > should render as avatar 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full align-middle transition-all border-0 bg-theme-info-200 h-10 w-10 px-4 py-2 ring-6 ring-theme-background duration-100"
  />
</div>
`;

exports[`Circle > should render extra-large 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-16 w-16 px-2 py-1 text-lg ring-6 ring-theme-background duration-100"
  />
</div>
`;

exports[`Circle > should render large 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 ring-theme-background duration-100"
  />
</div>
`;

exports[`Circle > should render small 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-6 ring-theme-background duration-100"
  />
</div>
`;

exports[`Circle > should render with content 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-6 ring-theme-background duration-100"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle > should render with no shadow 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 ring-theme-background duration-100"
  />
</div>
`;
